// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BookGrid matches snapshot (dark mode) 1`] = `
<div>
  <div
    data-testid="book-grid"
  >
    <div
      class="MuiBox-root css-qi0rix"
    >
      <div
        style="height: 100%;"
      >
        <div>
          <div
            aria-label="Atomic Habits by James Clear on Goodreads"
            class="MuiBox-root css-juqqx6"
            data-testid="book-card"
            role="link"
          >
            <div
              class="MuiBox-root css-1eekpyd"
            >
              <img
                alt="Cover of Atomic Habits"
                class="css-ekopze"
                loading="lazy"
                src="https://example.com/cover1.jpg"
                style="opacity: 0; transition: opacity 0.4s;"
              />
            </div>
            <div
              class="MuiBox-root css-1hdogsu"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5euya1-MuiTypography-root"
              >
                Atomic Habits
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-13yxw41-MuiTypography-root"
              >
                James Clear
              </p>
              <div
                class="MuiBox-root css-jv665g"
              >
                <div
                  class="MuiBox-root css-uklcv"
                >
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                </div>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rojdw0-MuiTypography-root"
                >
                  Jan 2025
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height: 100%;"
      >
        <div>
          <div
            aria-label="Deep Work by Cal Newport on Goodreads"
            class="MuiBox-root css-juqqx6"
            data-testid="book-card"
            role="link"
          >
            <div
              class="MuiBox-root css-1eekpyd"
            >
              <img
                alt="Cover of Deep Work"
                class="css-ekopze"
                loading="lazy"
                src="https://example.com/cover2.jpg"
                style="opacity: 0; transition: opacity 0.4s;"
              />
            </div>
            <div
              class="MuiBox-root css-1hdogsu"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5euya1-MuiTypography-root"
              >
                Deep Work
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-13yxw41-MuiTypography-root"
              >
                Cal Newport
              </p>
              <div
                class="MuiBox-root css-jv665g"
              >
                <div
                  class="MuiBox-root css-uklcv"
                >
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-3gnda5"
                  >
                    <svg
                      fill="none"
                      stroke="currentColor"
                      stroke-width="1.5"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                </div>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rojdw0-MuiTypography-root"
                >
                  Feb 2025
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookGrid matches snapshot (empty state) 1`] = `
<div>
  <div>
    <div
      class="MuiBox-root css-1uykfe0"
      data-testid="empty-state"
    >
      <div
        class="MuiBox-root css-1hq119z"
      >
        📚
      </div>
      <p
        class="MuiTypography-root MuiTypography-body1 css-o5r26m-MuiTypography-root"
      >
        No books found
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-112gkyv-MuiTypography-root"
      >
        Try adjusting your search or filters to find what you're looking for.
      </p>
    </div>
  </div>
</div>
`;

exports[`BookGrid matches snapshot (light mode) 1`] = `
<div>
  <div
    data-testid="book-grid"
  >
    <div
      class="MuiBox-root css-qi0rix"
    >
      <div
        style="height: 100%;"
      >
        <div>
          <div
            aria-label="Atomic Habits by James Clear on Goodreads"
            class="MuiBox-root css-1pslrmu"
            data-testid="book-card"
            role="link"
          >
            <div
              class="MuiBox-root css-1duyvry"
            >
              <img
                alt="Cover of Atomic Habits"
                class="css-ekopze"
                loading="lazy"
                src="https://example.com/cover1.jpg"
                style="opacity: 0; transition: opacity 0.4s;"
              />
            </div>
            <div
              class="MuiBox-root css-1hdogsu"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-er58ni-MuiTypography-root"
              >
                Atomic Habits
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1s6gn43-MuiTypography-root"
              >
                James Clear
              </p>
              <div
                class="MuiBox-root css-jv665g"
              >
                <div
                  class="MuiBox-root css-uklcv"
                >
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                </div>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1gk8641-MuiTypography-root"
                >
                  Jan 2025
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height: 100%;"
      >
        <div>
          <div
            aria-label="Deep Work by Cal Newport on Goodreads"
            class="MuiBox-root css-1pslrmu"
            data-testid="book-card"
            role="link"
          >
            <div
              class="MuiBox-root css-1duyvry"
            >
              <img
                alt="Cover of Deep Work"
                class="css-ekopze"
                loading="lazy"
                src="https://example.com/cover2.jpg"
                style="opacity: 0; transition: opacity 0.4s;"
              />
            </div>
            <div
              class="MuiBox-root css-1hdogsu"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-er58ni-MuiTypography-root"
              >
                Deep Work
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1s6gn43-MuiTypography-root"
              >
                Cal Newport
              </p>
              <div
                class="MuiBox-root css-jv665g"
              >
                <div
                  class="MuiBox-root css-uklcv"
                >
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1gr6vz7"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1tvuuia"
                  >
                    <svg
                      fill="none"
                      stroke="currentColor"
                      stroke-width="1.5"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                </div>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1gk8641-MuiTypography-root"
                >
                  Feb 2025
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
